samples/_failures_safe/1761333236_0d4256_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0809cd73.c: In function ‘validate_mesh’:
./samples/SAFE/__tmp_0809cd73.c:135:33: error: expected ‘)’ at end of input
  135 |     if (mesh->vertex_count > 100
      |        ~                        ^
      |                                 )
./samples/SAFE/__tmp_0809cd73.c:135:5: error: expected declaration or statement at end of input
  135 |     if (mesh->vertex_count > 100
      |     ^~
